--- a/charts/pourTester.html
+++ b/charts/pourTester.html
@@ -7,6 +7,8 @@
     <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
     <script src="utils.js"></script>
+    <script src="revenuMoyen_ef_etudes.js"></script>
+
 </head>
 <body>
 
