--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -159,11 +159,11 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Titre graph 1</h6>
+              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son nombre d’années d’expérience</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chart-line-1" class="chart-canvas" height="300"></canvas>
+                <canvas id="chartRevenuMoyenEfExperience" class="chart-canvas" height="300"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
