--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -38,8 +38,8 @@
   <script src="../charts/utils.js"></script>
 </head>
 
-<body class="g-sidenav-show  bg-gray-100">
-  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main">
+<body class="g-sidenav-show  bg-gray-100" >
+  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main" style="background-color: red;">
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <div class="navbar-brand m-0" >
@@ -135,24 +135,8 @@
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     <!-- Navbar -->
 
-   <!-- <nav class="navbar navbar-main navbar-expand-lg position-sticky blur shadow-blur mt-4 left-auto top-1 z-index-sticky bg-white border-radius-lg" id="navbarBlur" navbar-scroll="true"> -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
-      <div class="container-fluid py-1 px-3">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-            <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
-          </ol>
-          <h6 class="font-weight-bolder mb-0">Dashboard</h6>
-        </nav>
-        <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
-        
-        </div>
-      </div>
-    </nav>
-    <!-- End Navbar -->
 
-    <div class="container-fluid py-4">
+    <div class="container-fluid">
       <!-- Première ligne contenant 2 colonnes -->
       <div class="row mb-4">
         <!-- Colonne 1 : Graphique avec deux selects -->
