--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -36,6 +36,8 @@
   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
   <script src="../charts/utils.js"></script>
+  <script src="../charts/revenuMoyen_ef_experience.js"></script>
+  <script src="../charts/main.js"></script>
 </head>
 
 <body class="g-sidenav-show  bg-gray-100">
