--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -36,12 +36,10 @@
   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
   <script src="../charts/utils.js"></script>
-  <script src="../charts/revenuMoyen_ef_experience.js"></script>
-  <script src="../charts/main.js"></script>
 </head>
 
-<body class="g-sidenav-show  bg-gray-100" >
-  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main" style="background-color: red;">
+<body class="g-sidenav-show" style="background: #14b8a6;">
+  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main" style="background-color: white;">
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <div class="navbar-brand m-0" >
@@ -610,7 +608,7 @@
               <div class="copyright text-center text-sm text-muted text-lg-start">
                 © <script>
                   document.write(new Date().getFullYear())
-                </script>,
+                </script>
                 Réalisé <i class="fa fa-heart"></i> par
                 <a href="" class="font-weight-bold" target="_blank">FARES Nael</a>
                 et
