--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -69,7 +69,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">Dashboard</span>
+            <span class="nav-link-text ms-1">Expérience professionnelle</span>
           </a>
         </li>
         <li class="nav-item">
@@ -89,7 +89,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">DASHBOARD 2</span>
+            <span class="nav-link-text ms-1">Compétences techniques</span>
           </a>
         </li>
         <li class="nav-item">
@@ -109,7 +109,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">DASHBOARD 3</span>
+            <span class="nav-link-text ms-1">Technologies</span>
           </a>
         </li>
         <li class="nav-item">
