--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -609,13 +609,11 @@
           <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
               <div class="copyright text-center text-sm text-muted text-lg-start">
-                © <script>
-                  document.write(new Date().getFullYear())
-                </script>,
-                Réalisé <i class="fa fa-heart"></i> par
-                <a href="" class="font-weight-bold" target="_blank">FARES Nael</a>
+                © <span id="currentYear"></span>,
+                Réalisé par
+                <a href="https://github.com/NaelFares" class="font-weight-bold text-muted" target="_blank">FARES Nael</a>
                 et
-                <a href="" class="font-weight-bold" target="_blank">BENHALIMA Nesrine</a>
+                <a href="https://github.com/nesriiinee" class="font-weight-bold text-muted" target="_blank">BENHALIMA Nesrine</a>
               </div>
             </div>
           </div>
@@ -624,6 +622,12 @@
     </div>
   </main>
 
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document.getElementById("currentYear").textContent = new Date().getFullYear();
+    });
+  </script>
+  
   <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap.min.js"></script>
