--- a/charts/pourTester.html
+++ b/charts/pourTester.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
     <script src="utils.js"></script>
     <script src="revenuMoyen_ef_etudes.js"></script>
+    <script src="revenuMoyen_ef_experience.js"></script>
+
 
 </head>
 <body>
