--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -156,8 +156,7 @@
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="form-select bg-primary text-white" id="selectContinentEfExperience" style="width: auto; min-width: 150px;">
-                    <option value="Tous" style="color: black; background-color: white;">Tous</option>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfExperience" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
