--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -37,6 +37,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
   <script src="../charts/utils.js"></script>
   <script src="../charts/revenuMoyen_ef_experience.js"></script>
+  <script src="../charts/revenuMoyen_ef_etudes.js"></script>
   <script src="../charts/main.js"></script>
   <link href="../assets/css/style.css" rel="stylesheet" />
 </head>
@@ -180,24 +181,21 @@
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chart-line-2" class="chart-canvas" height="300"></canvas>
+                <canvas id="chartRevenuMoyenEfEtude"  class="chart-canvas" height="300"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: auto; min-width: 150px;">
-                    <option value="Tous" style="color: black; background-color: white;">Tous</option>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="select4" class="form-label">Mois</label>
-                  <select class="form-select bg-primary text-white" id="select4" style="width: auto; min-width: 150px;">
-                    <option value="1" style="color: black; background-color: white;">Janvier</option>
-                    <option value="2" style="color: black; background-color: white;">Février</option>
-                    <option value="3" style="color: black; background-color: white;">Mars</option>
+                  <label for="select2" class="form-label">Pays</label>
+                  <select class="form-select bg-primary text-white" id="selectPaysEfEtude" style="width: auto; min-width: 150px;">
+                    <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
               </div>
