--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -52,10 +52,13 @@
       </adiv>
     </div>
     <hr class="horizontal dark mt-0">
+    <span class="ms-1 font-weight-bold" style="margin-left: 10% !important; font-size: 1rem;">Graphique selon : </span>
+    <br>
+    <br>
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link  active" href="../pages/dashboard1.html">
+          <a class="nav-link active" href="../pages/dashboard1.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>shop </title>
@@ -75,7 +78,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="../pages/dashboard2.html">
+          <a class="nav-link " href="../pages/dashboard2.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>office</title>
@@ -111,14 +114,9 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1">Technologies</span>
+            <span class="nav-link-text ms-1">Technologies utilisées</span>
           </a>
         </li>
-        <li class="nav-item">
-        </li>
-        <li class="nav-item">
-        </li>
-        <li class="nav-item mt-3">
       </ul>
     </div>
     <div class="sidenav-footer mx-3 ">
@@ -126,10 +124,9 @@
         <div class="full-background" style="background-image: url('../assets/img/curved-images/white-curved.jpg')"></div>
         <div class="card-body text-start p-3 w-100">
           <div class="docs-info">
-            <h6 class="text-black up mb-2 font-weight-bold">Etudiants :</h6>
+            <h6 class="text-black up mb-2 font-weight-bold">StackOverflow Project :</h6>
               <ul>
-                  <li class="text-xs font-weight-bold">FARES Nael</li>
-                  <li class="text-xs font-weight-bold">BENHALIMA Nesrine</li>
+                  <li class="text-xs font-weight-bold">L'objectif est d’analyser et d’afficher certaines données issues de l’enquête StackOverFlow lancée en 2023 avec la librairie chart.js</li>
               </ul>
           </div>
         </div>
@@ -151,7 +148,7 @@
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfExperience" class="chart-canvas" height="300"></canvas>
+                <canvas id="chartRevenuMoyenEfExperience" class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
@@ -177,11 +174,11 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Titre graph 2</h6>
+              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son niveau d'étude</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfEtude"  class="chart-canvas" height="300"></canvas>
+                <canvas id="chartRevenuMoyenEfEtude"  class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
