--- a/charts/pourTester.html
+++ b/charts/pourTester.html
@@ -9,6 +9,7 @@
     <script src="utils.js"></script>
     <script src="revenuMoyen_ef_etudes.js"></script>
     <script src="revenuMoyen_ef_experience.js"></script>
+    <script src="revenuMoyen_ef_cloud.js"></script>
 
 
 </head>
