--- a/pages/dashboard2.html
+++ b/pages/dashboard2.html
@@ -36,8 +36,8 @@
   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
   <script src="../charts/utils.js"></script>
-  <script src="../charts/revenuMoyen_ef_experience.js"></script>
-  <script src="../charts/revenuMoyen_ef_etudes.js"></script>
+  <script src="../charts/revenuMoyen_ef_cloud.js"></script>
+  <script src="../charts/revenuMoyen_ef_framework.js"></script>
   <script src="../charts/main.js"></script>
   <link href="../assets/css/style.css" rel="stylesheet" />
 </head>
@@ -144,24 +144,24 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son nombre d’années d’expérience</h6>
+              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction des plateformes Cloud utilisées</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfExperience" class="chart-canvas" height="243"></canvas>
+                <canvas id="chartRevenuMoyenEfCloud" class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfExperience" style="width: auto; min-width: 150px;">
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfCloud" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfExperience" style="width: auto; min-width: 150px;">
+                  <select class="form-select bg-primary text-white" id="selectPaysEfCloud" style="width: auto; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
@@ -174,24 +174,24 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son niveau d'étude</h6>
+              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction des frameworks de développement web utilisées</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfEtude"  class="chart-canvas" height="243"></canvas>
+                <canvas id="chartRevenuMoyenEfFramework"  class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: auto; min-width: 150px;">
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfFramework" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfEtude" style="width: auto; min-width: 150px;">
+                  <select class="form-select bg-primary text-white" id="selectPaysEfFramework" style="width: auto; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
