--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -144,24 +144,25 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son nombre d’années d’expérience</h6>
+              <h6 class="mb-0">Top 5 des systèmes d’exploitation 
+                utilisés par les professionnels dans le cadre de leur travail en fonction de leur métier</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfExperience" class="chart-canvas" height="243"></canvas>
+                <canvas id="chartRevenuMoyenEfOS" class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfExperience" style="width: auto; min-width: 150px;">
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOS" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfExperience" style="width: auto; min-width: 150px;">
+                  <select class="form-select bg-primary text-white" id="selectPaysEfOS" style="width: auto; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
@@ -174,24 +175,26 @@
         <div class="col-lg-6 col-12 mt-4">
           <div class="card shadow h-100">
             <div class="card-header pb-0 p-3">
-              <h6 class="mb-0">Revenu moyen d’un professionnel en fonction de son niveau d'étude</h6>
+              <h6 class="mb-0">Top 5 des outils de 
+                communication utilisés par les professionnels dans le cadre de leur travail en 
+                fonction de leur métier</h6>
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfEtude"  class="chart-canvas" height="243"></canvas>
+                <canvas id="chartRevenuMoyenEfOutilComm"  class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group me-2">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: auto; min-width: 150px;">
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOutilComm" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
                 <div class="form-group">
                   <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfEtude" style="width: auto; min-width: 150px;">
+                  <select class="form-select bg-primary text-white" id="selectPaysEfOutilComm" style="width: auto; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
