--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -42,7 +42,7 @@
   <link href="../assets/css/style.css" rel="stylesheet" />
 </head>
 
-<body class="g-sidenav-show" >
+<body class="g-sidenav-show" data-page-name="dashboard3">
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 " id="sidenav-main" style="background-color: white;">
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
