--- a/pages/dashboard2.html
+++ b/pages/dashboard2.html
@@ -123,16 +123,22 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfCloud" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectContinentEfCloud" class="form-label">Continent</label>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfCloud" style="width: 150px; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfCloud" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectPaysEfCloud" class="form-label">Pays</label>
+                  <select class="form-select bg-primary text-white" id="selectPaysEfCloud" style="width: 150px; min-width: 150px;">
+                    <option value="1" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selectExperienceEfCloud" class="form-label">Années d'expériences</label>
+                  <select class="form-select bg-primary text-white" id="selectExperienceEfCloud" style="width: 150px; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
@@ -153,16 +159,22 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfFramework" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectContinentEfFramework" class="form-label">Continent</label>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfFramework" style="width: 150px; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfFramework" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectPaysEfFramework" class="form-label">Pays</label>
+                  <select class="form-select bg-primary text-white" id="selectPaysEfFramework" style="width: 150px; min-width: 150px;">
+                    <option value="1" style="color: black; background-color: white;"></option>
+                  </select>
+                </div>
+                <div class="form-group mx-1">
+                  <label for="selectExperienceEfFramework" class="form-label">Années d'expériences</label>
+                  <select class="form-select bg-primary text-white" id="selectExperienceEfFramework" style="width: 150px; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
