--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -123,16 +123,16 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfExperience" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectContinentEfExperience" class="form-label">Continent</label>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfExperience" style="width: 150px; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfExperience" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectPaysEfExperience" class="form-label">Pays</label>
+                  <select class="form-select bg-primary text-white" id="selectPaysEfExperience" style="width: 150px; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
@@ -153,16 +153,16 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectContinentEfEtudes" class="form-label">Continent</label>
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfEtudes" style="width: 150px; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfEtude" style="width: auto; min-width: 150px;">
+                <div class="form-group mx-1">
+                  <label for="selectPaysEfEtude" class="form-label">Pays</label>
+                  <select class="form-select bg-primary text-white" id="selectPaysEfEtude" style="width: 150px; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
