--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -124,14 +124,14 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
+                <div class="form-group mx-1">
                   <label for="select1" class="form-label">Continent</label>
                   <select class="continents form-select bg-primary text-white" id="selectContinentEfOS" style="width: auto; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
+                <div class="form-group mx-1">
                   <label for="select2" class="form-label">Pays</label>
                   <select class="form-select bg-primary text-white" id="selectPaysEfOS" style="width: auto; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
@@ -156,16 +156,16 @@
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
-                <div class="form-group me-2">
+                <div class="form-group mx-1">
                   <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOutilComm" style="width: auto; min-width: 150px;">
+                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOutilComm" style="width: 150px; min-width: 150px;">
                     <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
                     <option value="Europe" style="color: black; background-color: white;">Europe</option>
                   </select>
                 </div>
-                <div class="form-group">
+                <div class="form-group mx-1">
                   <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfOutilComm" style="width: auto; min-width: 150px;">
+                  <select class="form-select bg-primary text-white" id="selectPaysEfOutilComm" style="width: 150px; min-width: 150px;">
                     <option value="1" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
