--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -121,21 +121,17 @@
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfOS" class="chart-canvas" height="243"></canvas>
+                <canvas id="chartTopOSUtilise" class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group mx-1">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOS" style="width: auto; min-width: 150px;">
-                    <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
-                    <option value="Europe" style="color: black; background-color: white;">Europe</option>
-                  </select>
-                </div>
-                <div class="form-group mx-1">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfOS" style="width: auto; min-width: 150px;">
-                    <option value="1" style="color: black; background-color: white;"></option>
+                  <label for="selecTopOSUtilise" class="form-label">Années d'expériences</label>
+                  <select class="form-select bg-primary text-white" id="selecTopOSUtilise" style="width: 150px; min-width: 150px;">
+                    <option value="5" style="color: black; background-color: white;"></option>
+                    <option value="6" style="color: black; background-color: white;"></option>
+                    <option value="7" style="color: black; background-color: white;"></option>
+                    <option value="8" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
               </div>
@@ -153,21 +149,17 @@
             </div>
             <div class="card-body p-3">
               <div class="chart mb-3">
-                <canvas id="chartRevenuMoyenEfOutilComm"  class="chart-canvas" height="243"></canvas>
+                <canvas id="chartTopCommUtilise"  class="chart-canvas" height="243"></canvas>
               </div>
               <!-- Conteneur des selects -->
               <div class="d-flex justify-content">
                 <div class="form-group mx-1">
-                  <label for="select1" class="form-label">Continent</label>
-                  <select class="continents form-select bg-primary text-white" id="selectContinentEfOutilComm" style="width: 150px; min-width: 150px;">
-                    <option value="Amérique" style="color: black; background-color: white;">Amérique</option>
-                    <option value="Europe" style="color: black; background-color: white;">Europe</option>
-                  </select>
-                </div>
-                <div class="form-group mx-1">
-                  <label for="select2" class="form-label">Pays</label>
-                  <select class="form-select bg-primary text-white" id="selectPaysEfOutilComm" style="width: 150px; min-width: 150px;">
-                    <option value="1" style="color: black; background-color: white;"></option>
+                  <label for="selecTopOSUtilise" class="form-label">Années d'expériences</label>
+                  <select class="form-select bg-primary text-white" id="selecTopOSUtilise" style="width: 150px; min-width: 150px;">
+                    <option value="5" style="color: black; background-color: white;"></option>
+                    <option value="6" style="color: black; background-color: white;"></option>
+                    <option value="7" style="color: black; background-color: white;"></option>
+                    <option value="8" style="color: black; background-color: white;"></option>
                   </select>
                 </div>
               </div>
