--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -21,6 +21,8 @@
 
   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-colorschemes"></script>
   <script src="../charts/utils.js"></script>
   <script src="../charts/configurationURL.js"></script>
   <script src="../charts/top5_os.js"></script>
