--- a/pages/dashboard1.html
+++ b/pages/dashboard1.html
@@ -21,8 +21,12 @@
 
   <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
-  <script src="../charts/utils.js"></script>
-  <script src="../charts/configurationURL.js"></script>
+  <script src="../charts/utils/convert.js"></script>
+  <script src="../charts/utils/getters.js"></script>
+  <script src="../charts/utils/dataToDropDown.js"></script>
+  <script src="../charts/utils/calculs.js"></script>
+  <script src="../charts/utils/updates.js"></script>
+  <script src="../configurationURL.js"></script>
   <script src="../charts/revenuMoyen_ef_experience.js"></script>
   <script src="../charts/revenuMoyen_ef_etudes.js"></script>
   <script src="../charts/main.js"></script>
