--- a/pages/dashboard3.html
+++ b/pages/dashboard3.html
@@ -23,8 +23,12 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"> </script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-colorschemes"></script>
-  <script src="../charts/utils.js"></script>
-  <script src="../charts/configurationURL.js"></script>
+  <script src="../charts/utils/convert.js"></script>
+  <script src="../charts/utils/getters.js"></script>
+  <script src="../charts/utils/dataToDropDown.js"></script>
+  <script src="../charts/utils/calculs.js"></script>
+  <script src="../charts/utils/updates.js"></script>
+  <script src="../configurationURL.js"></script>
   <script src="../charts/top5_os.js"></script>
   <script src="../charts/top5_outilsComm.js"></script>
   <script src="../charts/main.js"></script>
